--- a/index.html
+++ b/index.html
@@ -54,6 +54,38 @@
                     </div>
                 </div>
 
+                <div class="cartao-pokemon tipo-agua" id="cartao-squirtle">
+                    <div class="cartao-topo">
+                        <div class="detalhes">
+                            <h2 class="nome">Squirtle</h2>
+                            <span>#010</span>
+                        </div>
+                        <span class="tipo">Água</span>
+                        <div class="cartao-imagem">
+                            <img src="src/imagens/squirtle.png" alt="Imagem do Squirtle">
+                        </div>
+                    </div>
+                    <div class="cartao-informacoes">
+                        <div class="status">
+                            <h3>Status</h3>
+                            <ul>
+                                <li>HP: 44</li>
+                                <li>Ataque: 48</li>
+                                <li>Defesa: 65</li>
+                                <li>Velocidade: 43</li>
+                                <li>Total: 200</li>
+                            </ul>
+                        </div>
+                        <div class="habilidades">
+                            <h3>habilidades</h3>
+                            <ul>
+                                <li>Arma de Água</li>
+                                <li>Bolhas</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="cartao-pokemon tipo-grama" id="cartao-bulbasaur">
                     <div class="cartao-topo">
                         <div class="detalhes">
@@ -220,6 +252,11 @@
                     <li class="pokemon ativo" id="pikachu">
                         <img src="./src/imagens/cabeca-pikachu.png" alt="cabeça do Pikachu">
                         <span>Pikachu</span>
+                    </li>
+
+                    <li class="pokemon" id="squirtle">
+                        <img src="./src/imagens/cabeca-squirtle.png" alt="Cabeça do Squirtle">
+                        <span>Squirtle</span>
                     </li>
 
                     <li class="pokemon" id="bulbasaur">
