--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </div>
                         <span class="tipo">Eletrico</span>
                         <div class="cartao-imagem">
-                            <img src="src/imagens/pikachu.png" alt="Imagem do Pikachu">
+                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/25.png" alt="Imagem do Pikachu">
                         </div>
                     </div>
                     <div class="cartao-informacoes">
